<resources>
    <string name="app_name">FItems</string>
    <string name="accedi">Accedi</string>
    <string name="registrati">Registrati</string>
    <string name="login">Login</string>
    <string name="CreaPost">Crea Post</string>


    <string name="nomePost">Nome oggetto perso</string>
    <string name="descrzionePost">Descrizione dell\'oggetto</string>
    <string name="messaggio">Messaggio</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="ripeti_password">Ripeti password</string>
    <string name="indirizzo">Indirizzo rappresentante il tuo quartiere</string>
    <string name="email">Email</string>

    <string name="indirizzo1">Indirizzo</string>
    <string name="input_error">Input non valido</string>

    <string name="open_s">Aperto</string>
    <string name="close_s">Chiuso</string>


</resources>