<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    tools:context=".LoginPage">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/accent"
            android:textSize="35sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250sp"
            android:layout_height="80sp"
            android:textColorHint="@color/accent"
            app:boxBackgroundColor="@color/primaryDark"
            app:boxCornerRadiusBottomEnd="@dimen/textboxCornerRadius"
            app:boxCornerRadiusBottomStart="@dimen/textboxCornerRadius"
            app:boxCornerRadiusTopEnd="@dimen/textboxCornerRadius"
            app:boxCornerRadiusTopStart="@dimen/textboxCornerRadius"
            app:boxStrokeColor="@color/accent"
            app:hintTextColor="@color/accent"
            app:placeholderTextColor="@color/accent"
            app:prefixTextColor="@color/accent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:hint="@string/username"
                android:textColor="@color/accent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250sp"
            android:layout_height="80sp"
            android:textColorHint="@color/accent"
            app:boxBackgroundColor="@color/primaryDark"
            app:boxCornerRadiusBottomEnd="@dimen/textboxCornerRadius"
            app:boxCornerRadiusBottomStart="@dimen/textboxCornerRadius"
            app:boxCornerRadiusTopEnd="@dimen/textboxCornerRadius"
            app:boxCornerRadiusTopStart="@dimen/textboxCornerRadius"
            app:boxStrokeColor="@color/accent"
            app:hintTextColor="@color/accent"
            app:placeholderTextColor="@color/accent"
            app:prefixTextColor="@color/accent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:hint="@string/password"
                android:textColor="@color/accent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAccedi"
            android:layout_width="210sp"
            android:layout_height="80sp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/primaryLight"
            android:text="Accedi"
            android:textColor="@color/accent"
            android:textSize="20sp"
            app:cornerRadius="@dimen/btnCornerRadius" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnIndex"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@null"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

</androidx.constraintlayout.widget.ConstraintLayout>