<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    tools:context=".RegistrationPage">

    <ImageButton
        android:id="@+id/btnIndex_registration"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Registrati"
        android:textColor="@color/accent"
        android:textSize="35sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIndex_registration" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="367dp"
        android:layout_height="488dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20sp"
            android:paddingRight="20sp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:textColorHint="@color/accent"
                app:boxBackgroundColor="@color/primaryDark"
                app:boxCornerRadiusBottomEnd="@dimen/textboxCornerRadius"
                app:boxCornerRadiusBottomStart="@dimen/textboxCornerRadius"
                app:boxCornerRadiusTopEnd="@dimen/textboxCornerRadius"
                app:boxCornerRadiusTopStart="@dimen/textboxCornerRadius"
                app:boxStrokeColor="@color/accent"
                app:hintTextColor="@color/accent"
                app:placeholderTextColor="@color/accent"
                app:prefixTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNome_registration"
                    android:layout_width="match_parent"
                    android:layout_height="65sp"
                    android:hint="@string/nome"
                    android:inputType="textPersonName"
                    android:textColor="@color/accent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:textColorHint="@color/accent"
                app:boxBackgroundColor="@color/primaryDark"
                app:boxCornerRadiusBottomEnd="@dimen/textboxCornerRadius"
                app:boxCornerRadiusBottomStart="@dimen/textboxCornerRadius"
                app:boxCornerRadiusTopEnd="@dimen/textboxCornerRadius"
                app:boxCornerRadiusTopStart="@dimen/textboxCornerRadius"
                app:boxStrokeColor="@color/accent"
                app:hintTextColor="@color/accent"
                app:placeholderTextColor="@color/accent"
                app:prefixTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCognome_registration"
                    android:layout_width="match_parent"
                    android:layout_height="65sp"
                    android:hint="@string/cognome"
                    android:inputType="textPersonName"
                    android:textColor="@color/accent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:textColorHint="@color/accent"
                app:boxBackgroundColor="@color/primaryDark"
                app:boxCornerRadiusBottomEnd="@dimen/textboxCornerRadius"
                app:boxCornerRadiusBottomStart="@dimen/textboxCornerRadius"
                app:boxCornerRadiusTopEnd="@dimen/textboxCornerRadius"
                app:boxCornerRadiusTopStart="@dimen/textboxCornerRadius"
                app:boxStrokeColor="@color/accent"
                app:hintTextColor="@color/accent"
                app:placeholderTextColor="@color/accent"
                app:prefixTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUsername_registration"
                    android:layout_width="match_parent"
                    android:layout_height="65sp"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:textColor="@color/accent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:textColorHint="@color/accent"
                app:boxBackgroundColor="@color/primaryDark"
                app:boxCornerRadiusBottomEnd="@dimen/textboxCornerRadius"
                app:boxCornerRadiusBottomStart="@dimen/textboxCornerRadius"
                app:boxCornerRadiusTopEnd="@dimen/textboxCornerRadius"
                app:boxCornerRadiusTopStart="@dimen/textboxCornerRadius"
                app:boxStrokeColor="@color/accent"
                app:hintTextColor="@color/accent"
                app:placeholderTextColor="@color/accent"
                app:prefixTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword1_registration"
                    android:layout_width="match_parent"
                    android:layout_height="65sp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/accent" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:textColorHint="@color/accent"
                app:boxBackgroundColor="@color/primaryDark"
                app:boxCornerRadiusBottomEnd="@dimen/textboxCornerRadius"
                app:boxCornerRadiusBottomStart="@dimen/textboxCornerRadius"
                app:boxCornerRadiusTopEnd="@dimen/textboxCornerRadius"
                app:boxCornerRadiusTopStart="@dimen/textboxCornerRadius"
                app:boxStrokeColor="@color/accent"
                app:hintTextColor="@color/accent"
                app:placeholderTextColor="@color/accent"
                app:prefixTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword2_registration"
                    android:layout_width="match_parent"
                    android:layout_height="65sp"
                    android:hint="@string/ripeti_password"
                    android:inputType="textPassword"
                    android:textColor="@color/accent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:textColorHint="@color/accent"
                app:boxBackgroundColor="@color/primaryDark"
                app:boxCornerRadiusBottomEnd="@dimen/textboxCornerRadius"
                app:boxCornerRadiusBottomStart="@dimen/textboxCornerRadius"
                app:boxCornerRadiusTopEnd="@dimen/textboxCornerRadius"
                app:boxCornerRadiusTopStart="@dimen/textboxCornerRadius"
                app:boxStrokeColor="@color/accent"
                app:hintTextColor="@color/accent"
                app:placeholderTextColor="@color/accent"
                app:prefixTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtIndirizzo_registration"
                    android:layout_width="match_parent"
                    android:layout_height="65sp"
                    android:hint="@string/indirizzo"
                    android:textColor="@color/accent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:textColorHint="@color/accent"
                app:boxBackgroundColor="@color/primaryDark"
                app:boxCornerRadiusBottomEnd="@dimen/textboxCornerRadius"
                app:boxCornerRadiusBottomStart="@dimen/textboxCornerRadius"
                app:boxCornerRadiusTopEnd="@dimen/textboxCornerRadius"
                app:boxCornerRadiusTopStart="@dimen/textboxCornerRadius"
                app:boxStrokeColor="@color/accent"
                app:hintTextColor="@color/accent"
                app:placeholderTextColor="@color/accent"
                app:prefixTextColor="@color/accent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail_registration"
                    android:layout_width="match_parent"
                    android:layout_height="65sp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/accent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data di nascita:"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnDatePicker_registration"
                style="?android:spinnerStyle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="01/01/2000"
                android:textColor="@color/primaryLight"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnRegistrati_registration"
        android:layout_width="210sp"
        android:layout_height="80sp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primaryLight"
        android:text="Registrati"
        android:textColor="@color/accent"
        android:textSize="20sp"
        app:cornerRadius="@dimen/btnCornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>